--- a/grandioso/menuAndFooter.html
+++ b/grandioso/menuAndFooter.html
@@ -23,7 +23,10 @@
                     <!-- <img src="./img/burger.svg" alt="" class="burger__img"> -->
                     <p class="p1 burger__text">Каталог</p>
                 </div>
-                <img src="./img/logo.svg" alt="" class="logo">
+                <picture>
+                    <source media="(max-width: 991px)" srcset="./img/logo.svg">
+                    <img src="./img/logoW.svg" alt="" class="logo">
+                </picture>
                 <div class="header__right">
                     <div class="search search_header">
                         <img src=" ./img/loupe.svg" alt="" class="">
