--- a/grandioso/index.html
+++ b/grandioso/index.html
@@ -221,8 +221,8 @@
         </div>
     </section>
 
-    <div class="slogan slogan_white">
-        <div class="container">
+    <div class="container">
+        <div class="slogan slogan_white slogan_maxWidth">
             <h3 class="h1 slogan__title">VA Grandiozo — это коллекция уникальных предметов мебели, собранных со всего мира.</h3>
             <div class="slogan__text"> <a href="" class="btn2">ПОДРОБНЕЕ О НАС</a></div>
         </div>
