--- a/grandioso/product.html
+++ b/grandioso/product.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="body body__gray">
+<body class="body body_gray">
     <header class="header">
         <div class="container">
             <div class="header__inner">
