--- a/grandioso/category.html
+++ b/grandioso/category.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="body__gray">
+<body class="body_gray">
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -160,6 +160,23 @@
                 <div class="heading__topInner heading__topInner_maxWidth ">
                     <h1 class="h5 text-center ">Стулья</h1>
                     <p class="p1 text-center">Нужен удобный стул для столовой ? Яркое кресло для гостинной? Или вы ищете рабочее кресло для офиса или компактный складной стул для сада? У нас найдется все!</p>
+                    <ul class="subcategory">
+                        <li>
+                            <a href="">Стул</a><span>23</span>
+                        </li>
+                        <li>
+                            <a href="">Офисный стул</a><span>213</span>
+                        </li>
+                        <li>
+                            <a href="">Табурет</a><span>3</span>
+                        </li>
+                        <li>
+                            <a href="">Барный стул</a><span>12</span>
+                        </li>
+                        <li>
+                            <a href="">Кресло</a><span>12</span>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -168,8 +185,149 @@
     <div class="filter">
         <div class="container">
             <div class="filter__inner">
-                <p class="h4">фильтры</p>
+                <p class="h4 filterOpen">фильтры</p>
                 <p class="h4">Найдено 248 товаров</p>
+            </div>
+        </div>
+        <div class="filter__body">
+            <div class="filter__сlose">
+                <img src="./img/close.svg" alt="">
+            </div>
+            <div class="container">
+                <div class="row filter__row">
+                    <div class="col-xs-12 col-md-2 col-sm-3">
+                        <div class="filter__item">
+                            <div class="filter__itemHead">
+                                <h4 class="btn1">Бренд</h4>
+                                <img src="./img/tick.svg" alt="">
+                            </div>
+                            <div class="filter__itemBody">
+                                <p class="p1">Artens</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Cersanit</p>
+                                <p class="p1">Emigres</p>
+                                <p class="p1">Euroceramica</p>
+                                <p class="p1">Exagres</p>
+                                <p class="p1">Golden</p>
+                                <p class="p1">Artens</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Cersanit</p>
+                                <p class="p1">Emigres</p>
+                                <p class="p1">Euroceramica</p>
+                                <p class="p1">Exagres</p>
+                                <p class="p1">Golden</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-2 col-sm-3">
+                        <div class="filter__item">
+                            <div class="filter__itemHead">
+                                <h4 class="btn1">Бренд</h4>
+                                <img src="./img/tick.svg" alt="">
+                            </div>
+                            <div class="filter__itemBody">
+                                <p class="p1">Artens</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Cersanit</p>
+                                <p class="p1">Emigres</p>
+                                <p class="p1">Euroceramica</p>
+
+                                <p class="p1">Exagres</p>
+                                <p class="p1">Golden</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-2 col-sm-3">
+                        <div class="filter__item">
+                            <div class="filter__itemHead">
+                                <h4 class="btn1">Бренд</h4>
+                                <img src="./img/tick.svg" alt="">
+                            </div>
+                            <div class="filter__itemBody">
+                                <p class="p1">Artens</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Golden</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-2 col-sm-3">
+                        <div class="filter__item">
+                            <div class="filter__itemHead">
+                                <h4 class="btn1">Бренд</h4>
+                                <img src="./img/tick.svg" alt="">
+                            </div>
+                            <div class="filter__itemBody">
+                                <p class="p1">Artens</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Golden</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-2 col-sm-3">
+                        <div class="filter__item">
+                            <div class="filter__itemHead">
+                                <h4 class="btn1">Бренд</h4>
+                                <img src="./img/tick.svg" alt="">
+                            </div>
+                            <div class="filter__itemBody">
+                                <p class="p1">Artens</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Golden</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-2 col-sm-3">
+                        <div class="filter__item">
+                            <div class="filter__itemHead">
+                                <h4 class="btn1">Бренд</h4>
+                                <img src="./img/tick.svg" alt="">
+                            </div>
+                            <div class="filter__itemBody">
+                                <p class="p1">Artens</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Golden</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Cersanit</p>
+                                <p class="p1">Emigres</p>
+                                <p class="p1">Euroceramica</p>
+                                <p class="p1">Exagres</p>
+                                <p class="p1">Golden</p>
+                                <p class="p1">Artens</p>
+                                <p class="p1">Belani</p>
+                                <p class="p1">Cersanit</p>
+                                <p class="p1">Emigres</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-4 col-sm-6">
+                        <div class="filter__item">
+                            <div class="filter__itemHead">
+                                <h4 class="btn1">Цена</h4>
+                                <img src="./img/tick.svg" alt="">
+                            </div>
+                            <div class="filter__itemBody">
+                                <br> о------------------о--
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-6">
+                        <div class="filter__item">
+                            <div class="filter__itemHead">
+                                <div class="filter__buttonWrap">
+                                    <div class="filter__buttonItem">
+                                        <button class="btn2 btn2_center">Сбросить все</button>
+                                    </div>
+                                    <div class="filter__buttonItem">
+                                        <button class="btn1 btn1_violet">Применить</button>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -467,6 +625,8 @@
     </footer>
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/jquery.custom-scrollbar.css" />
+    <script src="./js/jquery.custom-scrollbar.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="js/main.js "></script>
     <script>
@@ -478,6 +638,15 @@
             arrows: false,
             dots: true,
             dotsClass: "sliderDots pageCase__galeryDots"
+        });
+
+        $(document).ready(function() {
+            $(".filter__itemBody").customScrollbar({
+                "preventDefaultScroll": true,
+                "hScroll": false,
+                skin: "default-skin",
+                updateOnWindowResize: true
+            });
         });
     </script>
 </body>
