--- a/grandioso/category.html
+++ b/grandioso/category.html
@@ -201,7 +201,7 @@
                                 <h4 class="btn1">Бренд</h4>
                                 <img src="./img/tick.svg" alt="">
                             </div>
-                            <div class="filter__itemBody" data-simplebar>
+                            <div class="filter__itemBody" data-simplebar data-simplebar-auto-hide="false">
                                 <p class="p1">Artens</p>
                                 <p class="p1">Belani</p>
                                 <p class="p1">Cersanit</p>
@@ -225,7 +225,7 @@
                                 <h4 class="btn1">Бренд</h4>
                                 <img src="./img/tick.svg" alt="">
                             </div>
-                            <div class="filter__itemBody" data-simplebar>
+                            <div class="filter__itemBody" data-simplebar data-simplebar-auto-hide="false">
                                 <p class="p1">Artens</p>
                                 <p class="p1">Belani</p>
                                 <p class="p1">Cersanit</p>
@@ -243,7 +243,7 @@
                                 <h4 class="btn1">Бренд</h4>
                                 <img src="./img/tick.svg" alt="">
                             </div>
-                            <div class="filter__itemBody" data-simplebar>
+                            <div class="filter__itemBody" data-simplebar data-simplebar-auto-hide="false">
                                 <p class="p1">Artens</p>
                                 <p class="p1">Belani</p>
                                 <p class="p1">Golden</p>
@@ -256,7 +256,7 @@
                                 <h4 class="btn1">Бренд</h4>
                                 <img src="./img/tick.svg" alt="">
                             </div>
-                            <div class="filter__itemBody" data-simplebar>
+                            <div class="filter__itemBody" data-simplebar data-simplebar-auto-hide="false">
                                 <p class="p1">Artens</p>
                                 <p class="p1">Belani</p>
                                 <p class="p1">Golden</p>
@@ -269,7 +269,7 @@
                                 <h4 class="btn1">Бренд</h4>
                                 <img src="./img/tick.svg" alt="">
                             </div>
-                            <div class="filter__itemBody" data-simplebar>
+                            <div class="filter__itemBody" data-simplebar data-simplebar-auto-hide="false">
                                 <p class="p1">Artens</p>
                                 <p class="p1">Belani</p>
                                 <p class="p1">Golden</p>
@@ -282,7 +282,7 @@
                                 <h4 class="btn1">Бренд</h4>
                                 <img src="./img/tick.svg" alt="">
                             </div>
-                            <div class="filter__itemBody" data-simplebar>
+                            <div class="filter__itemBody" data-simplebar data-simplebar-auto-hide="false">
                                 <p class="p1">Artens</p>
                                 <p class="p1">Belani</p>
                                 <p class="p1">Golden</p>
