--- a/grandioso/category.html
+++ b/grandioso/category.html
@@ -493,6 +493,9 @@
                 </div>
 
             </div>
+            <div class="btnWrap btnWrap_center">
+                <a href="" class="btn2">Показать еще</a>
+            </div>
         </div>
     </div>
 
