--- a/grandioso/menuAndFooter.html
+++ b/grandioso/menuAndFooter.html
@@ -23,10 +23,9 @@
                     <!-- <img src="./img/burger.svg" alt="" class="burger__img"> -->
                     <p class="p1 burger__text">Каталог</p>
                 </div>
-                <picture>
-                    <source media="(max-width: 991px)" srcset="./img/logo.svg">
-                    <img src="./img/logoW.svg" alt="" class="logo">
-                </picture>
+                <a href="#">
+                    <img src="./img/logo.svg" alt="" class="logo">
+                </a>
                 <div class="header__right">
                     <div class="search search_header">
                         <img src=" ./img/loupe.svg" alt="" class="">
