--- a/grandioso/about.html
+++ b/grandioso/about.html
@@ -34,7 +34,7 @@
     <section class="heading">
         <div class="heading__top heading__top_blue">
             <div class="container">
-                <div class="heading__topInner">
+                <div class="heading__topInner heading__topInner_paddingBO">
                     <h1 class="h5 text-center">О нас</h1>
                 </div>
             </div>
