--- a/grandioso/news.html
+++ b/grandioso/news.html
@@ -33,7 +33,7 @@
     <section class="heading">
         <div class="heading__top heading__top_blue">
             <div class="container">
-                <div class="heading__topInner">
+                <div class="heading__topInner heading__topInner_paddingBO">
                     <h1 class="h5 text-center">Новости</h1>
                 </div>
             </div>
