--- a/grandioso/portfolio.html
+++ b/grandioso/portfolio.html
@@ -36,7 +36,7 @@
     <section class="heading">
         <div class="heading__top heading__top_gray">
             <div class="container">
-                <div class="heading__topInner">
+                <div class="heading__topInner heading__topInner_paddingBO">
                     <h1 class="h5 text-center">Портфолио</h1>
                 </div>
             </div>
