Changed style Link

--- a/grandioso/index.html
+++ b/grandioso/index.html
@@ -193,22 +193,30 @@
                                     <div class="main__sliderTextItem">
                                         <h3 class="h1">Новая коллекция: Leonie</h3>
                                         <p class="p1">В новой коллекции бренда представлены яркие и современные решения для гостинной и спальни. Благодаря новому механизму диван Leonie преобразуются в просторную кровать с достаточно ровным и широким спальным местом.</p>
-                                        <a href="" class="btn2 btn2_white">Подробнее</a>
+                                        <div class="btnWrap">
+                                            <a href="" class="btn2 btn2_white">Подробнее</a>
+                                        </div>
                                     </div>
                                     <div class="main__sliderTextItem">
                                         <h3 class="h1">Новая коллекция: Leonie</h3>
                                         <p class="p1">В новой коллекции бренда представлены яркие и современные решения для гостинной и спальни. Благодаря новому механизму диван Leonie преобразуются в просторную кровать с достаточно ровным и широким спальным местом.</p>
-                                        <a href="" class="btn2 btn2_white">Подробнее</a>
+                                        <div class="btnWrap">
+                                            <a href="" class="btn2 btn2_white">Подробнее</a>
+                                        </div>
                                     </div>
                                     <div class="main__sliderTextItem">
                                         <h3 class="h1">Новая коллекция: Leonie</h3>
                                         <p class="p1">В новой коллекции бренда представлены яркие и современные решения для гостинной и спальни. Благодаря новому механизму диван Leonie преобразуются в просторную кровать с достаточно ровным и широким спальным местом.</p>
-                                        <a href="" class="btn2 btn2_white">Подробнее</a>
+                                        <div class="btnWrap">
+                                            <a href="" class="btn2 btn2_white">Подробнее</a>
+                                        </div>
                                     </div>
                                     <div class="main__sliderTextItem">
                                         <h3 class="h1">Новая коллекция: Leonie</h3>
                                         <p class="p1">В новой коллекции бренда представлены яркие и современные решения для гостинной и спальни. Благодаря новому механизму диван Leonie преобразуются в просторную кровать с достаточно ровным и широким спальным местом.</p>
-                                        <a href="" class="btn2 btn2_white">Подробнее</a>
+                                        <div class="btnWrap">
+                                            <a href="" class="btn2 btn2_white">Подробнее</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -551,6 +559,7 @@
             dots: true,
             dotsClass: "sliderDots sliderDots_white sliderDots_sliderBg ",
             asNavFor: '.main__sliderText',
+  
         });
         $('.main__sliderText').slick({
             autoplay: true,
@@ -565,6 +574,7 @@
             dots: false,
             dotsClass: "sliderDots sliderDots_white sliderDots_sliderBg ",
             asNavFor: '.sliderBg',
+  
         });
         if ($(window).width() < 768) {
             $('.pros__slider').slick({
