--- a/grandioso/news.html
+++ b/grandioso/news.html
@@ -71,76 +71,76 @@
             <div class="newsList">
                 <div class="row">
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/2.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Мебель для хранения</h4>
                             <p class="p1 newsList__itesmate">Для солнечного июньского мероприятия был спроектирован стенд в стиле «современная веранда»...</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/3.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Открытие салона Pava Haus</h4>
                             <p class="p1 newsList__itesmate">Развитие семимильными шагами или «как встретить место мечты, влюбиться и создать новый классный продукт за...</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/4.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Открытие Casa Veneta Cucine</h4>
                             <p class="p1 newsList__itesmate">Для солнечного июньского мероприятия был спроектирован стенд в стиле «современная веранда»...</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/2.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Мебель для хранения</h4>
                             <p class="p1 newsList__itesmate">Для солнечного июньского мероприятия был спроектирован стенд в стиле «современная веранда»...</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/3.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Открытие салона Pava Haus</h4>
                             <p class="p1 newsList__itesmate">Развитие семимильными шагами или «как встретить место мечты, влюбиться и создать новый классный продукт за...</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/4.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Открытие Casa Veneta Cucine</h4>
                             <p class="p1 newsList__itesmate">Для солнечного июньского мероприятия был спроектирован стенд в стиле «современная веранда»...</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/2.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Мебель для хранения</h4>
                             <p class="p1 newsList__itesmate">Для солнечного июньского мероприятия был спроектирован стенд в стиле «современная веранда»...</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/3.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Открытие салона Pava Haus</h4>
                             <p class="p1 newsList__itesmate">Развитие семимильными шагами или «как встретить место мечты, влюбиться и создать новый классный продукт за...</p>
-                        </div>
+                        </a>
                     </div>
                     <div class="col-sm-6 col-md-4">
-                        <div class="newsList__item">
+                        <a href="" class="newsList__item">
                             <img src=" ./img/news/4.jpg" alt="" class="newsList__itemImg">
-                            <button class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</button>
+                            <p class="btn1 newsList__itesmate">19 ОКТЯБРЯ, 2019</p>
                             <h4 class="h6 newsList__itemTitle">Открытие Casa Veneta Cucine</h4>
                             <p class="p1 newsList__itesmate">Для солнечного июньского мероприятия был спроектирован стенд в стиле «современная веранда»...</p>
-                        </div>
+                        </a>
                     </div>
                 </div>
             </div>
