--- a/grandioso/menuAndFooter.html
+++ b/grandioso/menuAndFooter.html
@@ -27,12 +27,25 @@
                     <img src="./img/logo.svg" alt="" class="logo">
                 </a>
                 <div class="header__right">
-                    <div class="search search_header">
-                        <img src=" ./img/loupe.svg" alt="" class="">
-                    </div>
-                    <div class="basket">
-                        <img src=" ./img/basket.svg" alt="">
-                    </div>
+
+                    <form action="/catalog/" class="search search_header">
+                        <div class="search__hide">
+                            <input class="" id="title-search-input" type="text" name="q" value="" placeholder="Поиск" size="20" maxlength="50" autocomplete="off">
+                        </div>
+                        <button class="" type="submit" name="s" value="Найти">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8.04738 14.7143C11.8457 14.7143 14.9248 11.6442 14.9248 7.85714C14.9248 4.07004 11.8457 1 8.04738 1C4.24906 1 1.16992 4.07004 1.16992 7.85714C1.16992 11.6442 4.24906 14.7143 8.04738 14.7143Z"  stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M13.2061 13L17.2178 17" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </button>
+                    </form>
+
+                    <a href="" class="basket">
+                        <svg width="15" height="20" viewBox="0 0 15 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M4.37463 5.09535C4.37463 5.09535 4.37463 1 7.78199 1C11.1894 1 11.1894 5.09535 11.1894 5.09535M1.53516 5.09535V18.7465H14.0288V5.09535H1.53516Z" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                        <span class="basket__count">34</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -44,8 +57,19 @@
         </div>
         <div class="mainMenu__col1 ">
             <div class="mainMenu__col1Inner">
-                <div class="search search_mainMenu">
-                    <img src=" ./img/loupe.svg" alt="" class="">
+
+                <div class="">
+                    <form action="/catalog/" class="search search_mainMenu">
+                        <div class="search__hide">
+                            <input class="" id="title-search-input" type="text" name="q" value="" placeholder="Поиск" size="20" maxlength="50" autocomplete="off">
+                        </div>
+                        <button class="" type="submit" name="s" value="Найти">
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8.04738 14.7143C11.8457 14.7143 14.9248 11.6442 14.9248 7.85714C14.9248 4.07004 11.8457 1 8.04738 1C4.24906 1 1.16992 4.07004 1.16992 7.85714C1.16992 11.6442 4.24906 14.7143 8.04738 14.7143Z"  stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+                                <path d="M13.2061 13L17.2178 17" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
                 <ul class="mainMenu__col1TopMenu">
                     <li>
