--- a/VR/index.html
+++ b/VR/index.html
@@ -215,7 +215,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row marginTop">
+            <div class="row marginTop_big">
                 <div class="col-lg-6 offset-lg-4 col-md-8 offset-md-2 col-10 offset-1">
                     <div class="quote">
                         <img src="img/quotes.svg" alt="" class="quote__img  wow fade-in-top" data-wow-delay="0.7s">
