--- a/VR/cours.html
+++ b/VR/cours.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <div class="pageCoursFirst">
+    <div class="pageFirst">
         <div class="header row">
             <div class="col-1"></div>
             <a class="header__logo wow" href=""><img class="" src="img/logo.svg" alt=""></a>
@@ -46,8 +46,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-1 offset-1 d-none d-lg-flex align-items-end justify-content-end">
-                    <div class="pageCoursFirst__social wow fade-in-top" data-wow-delay="0.6s">
-                        <a href=" " class="pageCoursFirst__socialItem ">
+                    <div class="pageFirst__social wow fade-in-top" data-wow-delay="0.6s">
+                        <a href=" " class="pageFirst__socialItem ">
                             <svg width="20 " height="20 " viewBox="0 0 20 20 " xmlns="http://www.w3.org/2000/svg ">
                                 <path d="M13.0697 0H6.93047C1.32815 0 6.10352e-05 1.32808 6.10352e-05 6.93041V13.0696C6.10352e-05 18.6719 1.32815 20 6.93047 20H13.0697C18.672 20 20.0001 18.6719 20.0001 13.0696V6.93041C20.0001 1.32808 18.6589 0 13.0697
                         0ZM16.1458 14.2671H14.694C14.144 14.2671 13.9746 13.8308 12.9853 12.8283C12.1259 11.9953 11.7453 11.8846 11.5335 11.8846C11.2341 11.8846 11.1491 11.969 11.1491 12.3796V13.6914C11.1491 14.0433 11.0385 14.2546 10.1072 14.2546C8.56729
@@ -57,7 +57,7 @@
                         14.3927 10.2466 14.3927 10.2466C14.2396 10.5003 14.1809 10.6109 14.3927 10.894C14.549 11.1059 15.0571 11.5453 15.3952 11.939C16.0171 12.6452 16.4952 13.2377 16.6227 13.6477C16.7658 14.0546 16.5545 14.2664 16.1439 14.2664L16.1458 14.2671Z "></path>
                             </svg>
                         </a>
-                        <a href=" " class="pageCoursFirst__socialItem ">
+                        <a href=" " class="pageFirst__socialItem ">
                             <svg width="20 " height="21 " viewBox="0 0 20 21 " xmlns="http://www.w3.org/2000/svg ">
                                 <path d="M19.9356 5.91293C19.9234 5.07219 19.7679 4.23812 19.4703 3.4518C18.9494 2.10906 17.8888 1.04731 16.546 0.527544C15.7697 0.235451 14.949 0.0788539 14.1182 0.061084C13.0498 0.0133275 12.7111 0 9.99895 0C7.28682
                         0 6.9392 7.45058e-08 5.87856 0.061084C5.04893 0.0788539 4.22818 0.235451 3.45186 0.527544C2.10912 1.04731 1.04737 2.10906 0.527604 3.4518C0.235512 4.22812 0.0778043 5.04887 0.0622556 5.8785C0.0144991 6.94802 6.10352e-05 7.28676 6.10352e-05
@@ -69,7 +69,7 @@
                                 <path d="M9.99383 13.329C11.8358 13.329 13.329 11.8357 13.329 9.99377C13.329 8.15179 11.8358 6.65858 9.99383 6.65858C8.15186 6.65858 6.65864 8.15179 6.65864 9.99377C6.65864 11.8357 8.15186 13.329 9.99383 13.329Z "></path>
                             </svg>
                         </a>
-                        <a href=" " class="pageCoursFirst__socialItem ">
+                        <a href=" " class="pageFirst__socialItem ">
                             <svg width="20 " height="21 " viewBox="0 0 20 21 " xmlns="http://www.w3.org/2000/svg ">
                                 <path fill-rule="evenodd " clip-rule="evenodd " d="M20.0001 5.0332C20.0001 2.27178 17.7615 0.0332031 15.0001 0.0332031H5.00006C2.23864 0.0332031 6.10352e-05 2.27178 6.10352e-05 5.0332V15.0332C6.10352e-05 17.7946 2.23864
                         20.0332 5.00006 20.0332H15.0001C17.7615 20.0332 20.0001 17.7946 20.0001 15.0332V5.0332ZM14.0001 10.5332L8.00006 7.0332V14.0332L14.0001 10.5332Z "></path>
@@ -81,7 +81,7 @@
                     <nav class="breadcrumb wow fade-in " data-wow-delay="0.3s ">
                         <a href="/ " class=" ">Главная</a>&nbsp;/&nbsp;<a href="/ " class=" ">Курсы</a>&nbsp;/&nbsp;Курс1
                     </nav>
-                    <img class="pageCoursFirst__img wow slide-left " src="img/courses/c1/mainImg.jpg " alt=" ">
+                    <img class="pageFirst__img wow slide-left " src="img/courses/c1/mainImg.jpg " alt=" ">
                 </div>
             </div>
         </div>
