--- a/GT/index.html
+++ b/GT/index.html
@@ -124,7 +124,60 @@
         </div>
     </section>
     <section class="sectionAbout p-t-5">
-
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xl-21 offset-3 col-lg-21 offset-lg-3 col-md-21 offset-md-3 col-sm-21 offset-sm-3 col-21 offset-3 m-b-4">
+                    <h2 class="h6 titleSection">/О КОМПАНИИ</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-8 offset-3 col-lg-8 offset-lg-3 col-md-18 offset-md-3 col-sm-19 offset-sm-3 col-19 offset-3 m-t-4">
+                    <p class="p1">
+                        С момента основания GT Corporation работает в области морского гидротехнического строительства, используя опыт и знания профессионалов, которые много лет своей жизни отдали строительству морских сооружений.
+                    </p>
+                </div>
+                <div class="col-xl-12 offset-1 col-lg-12 offset-lg-1 col-md-17 offset-md-7 col-sm-18 offset-sm-6 col-18 offset-6 m-t-4">
+                    <picture>
+                        <source srcset="img/about1-sm.jpg" media="(max-width: 768px)">
+                        <source srcset="img/about1-md.jpg" media="(max-width: 1100px)">
+                        <img class="w-100 h-auto"  srcset="img/about1-lg.jpg" alt="">
+                    </picture>
+                </div>
+                <div class="col-xl-16 offset-3 col-lg-12 offset-lg-3 col-md-16 offset-md-3 col-sm-19 offset-sm-3 col-19 offset-3">
+                    <picture>
+                        <source srcset="img/about2-sm.jpg" media="(max-width: 768px)">
+                        <source srcset="img/about2-md.jpg" media="(max-width: 1100px)">
+                        <img class="w-100 h-auto" srcset="img/about2-lg.jpg" alt="">
+                    </picture>
+                </div>
+            </div>
+            <div class="row m-t-4 m-b-5">
+                <div class="col-xl-7 offset-3 col-lg-7 offset-lg-3 col-md-16 offset-md-3 col-sm-19 offset-sm-3 col-19 offset-3 m-t-4">
+                    <p class="p2">
+                        ГТ ИНСПЕКТ - это российские предприятия международной группы, подразделения которой работают в области гидротехнического строительства в различных cубъектах Российской Федерации.
+                        Компания занимается обследованием, проектированием, строительством, реконструкцией и ремонтом морских гидротехнических сооружений. Мы используем только  современное и безопасное оборудование.
+                    </p>
+                </div>
+                <div class="col-xl-12 offset-2 col-lg-12 offset-lg-2 col-md-21 offset-md-3 col-sm-21 offset-sm-3 col-21 offset-3 m-t-4">
+                    <div class="numCompany p-b-3">
+                        <h5 class="h4 ttu">работаем с 1990</h5>
+                        <p class="p2">Компания создана в 1992 году.</p>
+                    </div>
+                    <div class="numCompany p-b-3 p-t-3">
+                        <h5 class="h4 ttu">работаем с 1990</h5>
+                        <p class="p2">Компания создана в 1992 году.</p>
+                    </div>
+                    <div class="numCompany p-b-3 p-t-3">
+                        <h5 class="h4 ttu">работаем с 1990</h5>
+                        <p class="p2">Компания создана в 1992 году.</p>
+                    </div>
+                    <div class="numCompany p-b-3 p-t-3">
+                        <h5 class="h4 ttu">работаем с 1990</h5>
+                        <p class="p2">Компания создана в 1992 году.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
