--- a/GT/index.html
+++ b/GT/index.html
@@ -479,6 +479,98 @@
                 </div>
             </div>
         </div>
+        <div class="projectBody p-t-5 p-b-5">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-xl-21 offset-xl-3 col-lg-21 offset-lg-3 col-md-19 offset-md-5 col-sm-18 offset-sm-3 col-18 offset-3 m-b-6">
+                        <div class="sliderP">
+                            <div class="sliderP__item">
+                                <div class="sliderP__bg">
+                                    <img src="img/sliderP/1.jpg" alt="">
+                                </div>
+                                <div class="sliderP__content">
+                                    <div class="sliderP__img">
+                                        <img src="img/sliderP/1.jpg" alt="">
+                                    </div>
+                                    <div class="sliderP__textWrap">
+                                        <h4 class="h3 m-t-3">Причалы в посёлке Ижевское</h4>
+                                        <div class="sliderP__text">
+                                            <div class="sliderP__line"></div>
+                                            <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="sliderP__item">
+                                <div class="sliderP__bg">
+                                    <img src="img/sliderP/2.jpg" alt="">
+                                </div>
+                                <div class="sliderP__content">
+                                    <div class="sliderP__contentWrap">
+                                        <div class="sliderP__img">
+                                            <img src="img/sliderP/2.jpg" alt="">
+                                        </div>
+                                        <div class="sliderP__textWrap">
+                                            <h4 class="h3 m-t-3">Причалы в посёлке Ижевское</h4>
+                                            <div class="sliderP__text">
+                                                <div class="sliderP__line"></div>
+                                                <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства
+                                                    и эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                                <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду
+                                                    блока ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="sliderP__item">
+                                <div class="sliderP__bg">
+                                    <img src="img/sliderP/3.jpg" alt="">
+                                </div>
+                                <div class="sliderP__content">
+                                    <div class="sliderP__img">
+                                        <img src="img/sliderP/3.jpg" alt="">
+                                    </div>
+                                    <div class="sliderP__textWrap">
+                                        <h4 class="h3 m-t-3">Причалы в посёлке Ижевское</h4>
+                                        <div class="sliderP__text">
+                                            <div class="sliderP__line"></div>
+                                            <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="sliderP__item">
+                                <div class="sliderP__bg">
+                                    <img src="img/sliderP/4.jpg" alt="">
+                                </div>
+                                <div class="sliderP__content">
+                                    <div class="sliderP__img">
+                                        <img src="img/sliderP/4.jpg" alt="">
+                                    </div>
+                                    <div class="sliderP__textWrap">
+                                        <h4 class="h3 m-t-3">Причалы в посёлке Ижевское</h4>
+                                        <div class="sliderP__text">
+                                            <div class="sliderP__line"></div>
+                                            <p class="p2">В 2000-2002 годах реконструированы причалы № 1,2,3 и построен причал № 6 на базе обеспечения ООО «ЛУКОЙЛ-Калининградморнефть» в поселке Ижевское, Калининградской области. База создавалась для строительства и
+                                                эксплуатации стационарных морских нефтедобывающих платформ в российской Балтике. </p>
+                                            <p class="p2">ГТ ИНСПЕКТ также участвовал в восстановлении антикоррозионного лакокрасочного покрытия незаконченного с советских времен опорного блока ОБ-1, на шельфе Балтийского моря. Осуществлял монтаж и спуск на воду блока
+                                                ОБ-2 платформы Д-6 месторождения Кравцовское. Осуществлял монтаж и спуск на воду блока ОБ-2 платформы Д-6 месторождения Кравцовское.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
         <div class="seaBig">
