--- a/GT/index.html
+++ b/GT/index.html
@@ -602,33 +602,47 @@
                     <div class="col-xl-16 offset-xl-6 col-lg-18 offset-lg-4 col-md-20 offset-md-3 col-sm-18 offset-sm-4 col-18 offset-4">
                         <div class="row align-items-end">
                             <div class="col-xl-14 offset-xl-0 col-lg-14 offset-lg-0 col-md-14 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
-                                <img class="licenses__img" src="img/licenses/l1.jpg" alt="">
+                                <a href="#modal-1" data-modal-open="">
+                                    <img class="licenses__img" src="img/licenses/l1.jpg" alt="">
+                                </a>
+
                             </div>
                             <div class="col-xl-10 offset-xl-0 col-lg-10 offset-lg-0 col-md-10 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
-                                <img class="licenses__img" src="img/licenses/l2.jpg" alt="">
-                                <img class="licenses__img" src="img/licenses/l3.jpg" alt="">
+                                <a href="#modal-2" data-modal-open="">
+                                    <img class="licenses__img" src="img/licenses/l2.jpg" alt="">
+                                </a>
+                                <a href="#modal-3" data-modal-open="">
+                                    <img class="licenses__img" src="img/licenses/l3.jpg" alt="">
+                                </a>
+
+
 
                             </div>
                         </div>
                         <div class="row align-items-stretch ">
                             <div class="col-xl-10 offset-xl-0 col-lg-10 offset-lg-0 col-md-10 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
-                                <img class="licenses__img licenses__img_h " src="img/licenses/l4.jpg" alt="">
-
+                                <a href="#modal-4" data-modal-open="">
+                                    <img class="licenses__img licenses__img_h " src="img/licenses/l4.jpg" alt="">
+                                </a>
                             </div>
                             <div class="col-xl-14 offset-xl-0 col-lg-14 offset-lg-0 col-md-14 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
-                                <img class="licenses__img" src="img/licenses/l5.jpg" alt="">
+                                <a href="#modal-5" data-modal-open="">
+                                    <img class="licenses__img" src="img/licenses/l5.jpg" alt="">
+                                </a>
 
                             </div>
 
                         </div>
                         <div class="row">
                             <div class="col-xl-15 offset-xl-0 col-lg-15 offset-lg-0 col-md-15 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
-                                <img class="licenses__img" src="img/licenses/l6.jpg" alt="">
-
+                                <a href="#modal-6" data-modal-open="">
+                                    <img class="licenses__img" src="img/licenses/l6.jpg" alt="">
+                                </a>
                             </div>
                             <div class="col-xl-9 offset-xl-0 col-lg-9 offset-lg-0 col-md-9 offset-md-0 col-sm-24 offset-sm-0 col-24 offset-0">
-                                <img class="licenses__img" src="img/licenses/l7.jpg" alt="">
-
+                                <a href="#modal-7" data-modal-open="">
+                                    <img class="licenses__img" src="img/licenses/l7.jpg" alt="">
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -991,8 +1005,36 @@
             </svg>
 
         </footer>
+        <div id="modal-1">
+            <img src="img/licenses/l1.jpg" alt="">
+        </div>
+        <div id="modal-2">
+            <img src="img/licenses/l2.jpg" alt="">
+        </div>
+        <div id="modal-3">
+            <img src="img/licenses/l3.jpg" alt="">
+        </div>
+        <div id="modal-4">
+            <img src="img/licenses/l4.jpg" alt="">
+        </div>
+        <div id="modal-5">
+            <img src="img/licenses/l5.jpg" alt="">
+        </div>
+        <div id="modal-6">
+            <img src="img/licenses/l6.jpg" alt="">
+        </div>
+        <div id="modal-7">
+            <img src="img/licenses/l7.jpg" alt="">
+        </div>
+        <div class="modal">
+            <div class="modal-inner">
+                <a data-modal-close>&times;</a>
+                <div class="modal-content"></div>
+            </div>
+        </div>
 
     </div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js" integrity="sha512-Eak/29OTpb36LLo2r47IpVzPBLXnAMPAVypbSZiZ4Qkf8p/7S/XRG5xp7OKWPPYfJT6metI+IORkR5G8F900+g==" crossorigin="anonymous"></script>
     <script>
         wow = new WOW({
@@ -1008,6 +1050,7 @@
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <script src="https://unpkg.com/tippy.js@6"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js" integrity="sha512-HaoDYc3PGduguBWOSToNc0AWGHBi2Y432Ssp3wNIdlOzrunCtB2qq6FrhtPbo+PlbvRbyi86dr5VQx61eg/daQ==" crossorigin="anonymous"></script>
+    <script src="js/vanilla-modal.js"></script>
     <script src="js/main.js"></script>
 
 
