--- a/GT/index.html
+++ b/GT/index.html
@@ -115,10 +115,10 @@
             </div>
         </section>
         <section class="sectionVideo">
-            <video class="sectionVideo__video" loop="loop" muted="muted" poster="img/mainBg.jpg">
-                <source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'>
-                <source src="video/duel.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-                <source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'>
+            <video class="sectionVideo__video" autoplay="autoplay" loop="loop" muted="muted" poster="img/mainBg.jpg">
+                <!-- <source src="video/duel.ogv" type='video/ogg; codecs="theora, vorbis"'> -->
+                <source src="img/video.mp4" type='video/mp4;'>
+                <!-- <source src="video/duel.webm" type='video/webm; codecs="vp8, vorbis"'> -->
             </video>
             <div class="btnNext">
                 <div class="btnNext__inner">
